[gd_scene load_steps=9 format=3 uid="uid://1x3fsewlxha4"]

[ext_resource type="Script" path="res://addons/inventory_editor/scenes/craft/InventoryCraftData.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://vm7tsyelpwqy" path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPath.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dnw1xbg83c5pu" path="res://addons/inventory_editor/icons/Add.png" id="5"]
[ext_resource type="PackedScene" uid="uid://ov647hx6yjxa" path="res://addons/ui_extensions/dropdown/Dropdown.tscn" id="5_d7qex"]
[ext_resource type="PackedScene" uid="uid://u74jsfdfgk3k" path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataIngredient.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://cac6lun4xnxxp" path="res://addons/inventory_editor/icons/Recipe.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bsbdtbgy66s7k" path="res://addons/inventory_editor/icons/File.png" id="10"]
[ext_resource type="PackedScene" uid="uid://b8iwtxhbuvmmf" path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPathScene.tscn" id="12"]

[node name="InventoryCraftData" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="MarginData" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxTop" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginData/VBox/HBoxTop"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxStack" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxStack"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Stacksize"

[node name="Stacksize" type="LineEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxStack"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxStacks" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxStacks"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Max Stacks"

[node name="Stacks" type="LineEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxStacks"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxMaxAmount" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxMaxAmount"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Max Amount"

[node name="MaxAmount" type="LineEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxMaxAmount"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxIcon" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxIcon"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Icon"

[node name="Icon" parent="MarginData/VBox/HBoxTop/VBox/HBoxIcon" instance=ExtResource("4")]
layout_mode = 2

[node name="HBoxScene" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Scene"

[node name="Scene" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene" instance=ExtResource("12")]
layout_mode = 2

[node name="Open" type="Button" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene"]
layout_mode = 2
icon = ExtResource("10")
icon_alignment = 1

[node name="HBoxDescription" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 5
text = "Description"

[node name="Description" type="TextEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Dropdown" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription" instance=ExtResource("5_d7qex")]
layout_mode = 2

[node name="VBoxPreview" type="VBoxContainer" parent="MarginData/VBox/HBoxTop"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBoxPreview"]
layout_mode = 2
text = "Icon"

[node name="Texture" type="TextureRect" parent="MarginData/VBox/HBoxTop/VBoxPreview"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("7")
expand_mode = 1
stretch_mode = 5

[node name="HBoxItem" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBoxItem"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Item to craft"

[node name="Item" parent="MarginData/VBox/HBoxItem" instance=ExtResource("5_d7qex")]
layout_mode = 2

[node name="HBoxAdd" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="Add" type="Button" parent="MarginData/VBox/HBoxAdd"]
layout_mode = 2
icon = ExtResource("5")

[node name="Label" type="Label" parent="MarginData/VBox/HBoxAdd"]
layout_mode = 2
text = "Ingredients"

[node name="VBoxIngredients" type="VBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="HBoxIngredients" parent="MarginData/VBox/VBoxIngredients" instance=ExtResource("6")]
layout_mode = 2
